--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -305,7 +305,7 @@
   document.addEventListener('DOMContentLoaded', function() {
     // Step 1: Extract the Product ID from the URL
     const urlParams = new URLSearchParams(window.location.search);
-    const productId = urlParams.get('product_Id'); // Assuming the URL parameter is named 'productId'
+    const productId = urlParams.get('product_id'); // Assuming the URL parameter is named 'productId'
 
     if (productId) {
         // Step 2: Fetch Product Data
