--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -192,7 +192,7 @@
           <div class="row gx-4 gx-lg-5 align-items-center">
               <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="Product Image" /></div>
               <div class="col-md-6">
-                  <!-- <div class="small mb-1">stock: BST-498</div> -->
+                  <div class="small mb-1">stock: BST-498</div>
                   <h1 class="display-5 fw-bolder">Shop item template</h1>
                   <div class="fs-5 mb-5">
                       <!-- <span class="text-decoration-line-through">$45.00</span> -->
@@ -319,7 +319,7 @@
         .then(product => {
             // Step 3: Update HTML Content with Product Details
             document.querySelector('.card-img-top').src = product.image_url || 'https://dummyimage.com/600x700/dee2e6/6c757d.jpg';
-            document.querySelector('.small.mb-1').textContent = `Stock: ${product.stock}`;
+            document.querySelector('.small.mb-1').textContent = `Stok: ${product.stock}`;
             document.querySelector('h1.display-5.fw-bolder').textContent = product.name;
             // document.querySelector('.fs-5.mb-5 .text-decoration-line-through').textContent = `$${product.originalPrice}`;
             document.querySelector('.fs-5.mb-5 span:not(.text-decoration-line-through)').textContent = `$${product.price}`;
