--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -322,7 +322,7 @@
             document.querySelector('.small.mb-1').textContent = `Stock: ${product.stock}`;
             document.querySelector('h1.display-5.fw-bolder').textContent = product.name;
             // document.querySelector('.fs-5.mb-5 .text-decoration-line-through').textContent = `$${product.originalPrice}`;
-            document.querySelector('.fs-5.mb-5 span:not(.text-decoration-line-through)').textContent = `$${product.price}`;
+            document.querySelector('.fs-5.mb-5 span:not(.text-decoration-line-through)').textContent = `Rp. ${product.price}`;
             document.querySelector('.lead').textContent = product.description;
             // Update the star ratings if applicable
             // Update any other elements as needed
