--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -492,7 +492,7 @@ function generateProductCards(products) {
             </div>
           </div>
           <div class="card-footer p-3 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="product.html?product_id=${product.product_id}">View Details</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="pageproduct.html?product_id=${product.product_id}">View Details</a></div>
           </div>
         </div>
       </div>
