--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -152,7 +152,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light mb-4" style="background-color: #a44e24;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="landingpage.html"><img src="/img/brand-name.png" alt="Logo"></a>
+          <a class="navbar-brand" href="landingpage.html"><img src="vendorkita.png" alt="Logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -210,7 +210,7 @@
                       <input class="form-control text-center me-3" id="inputQuantity" type="number" value="1" min="1" style="max-width: 3rem" />
                       <button class="btn btn-outline-dark flex-shrink-0" type="button" id="addToCartButton">
                           <i class="bi-cart-fill me-1"></i>
-                          Add to cart
+                          Buy Now
                       </button>
                   </div>
               </div>
