--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -243,7 +243,7 @@
       <div id="paymentModalBackdrop">
         <div id="paymentModal">
           <h2>Complete Your Payment</h2>
-          <input type="text" id="nameInput" placeholder="Your Name" class="form-control mb-3">
+          <input type="email" id="emailInput" placeholder="Your Email" class="form-control mb-3">
           <input type="file" id="fileUpload">
           <button id="uploadBtn">Upload Screenshot</button>
         </div>
