--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -379,9 +379,9 @@ document.getElementById('buyNowBtn').addEventListener('click', function() {
 
 document.getElementById('uploadBtn').addEventListener('click', function() {
     const fileInput = document.getElementById('fileUpload');
-    const nameInput = document.getElementById('nameInput');
+    const emailInput = document.getElementById('emailInput');
     const file = fileInput.files[0];
-    const name = nameInput.value;
+    const name = emailInput.value;
 
     if (file && name) {
         const formData = new FormData();
