--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -243,9 +243,20 @@
       <div id="paymentModalBackdrop">
         <div id="paymentModal">
           <h2>Complete Your Payment</h2>
-          <input type="email" id="emailInput" placeholder="Your Email" class="form-control mb-3">
+          <input type="email" id="emailInput" placeholder="Your Email">
+
+          <!-- Existing Quantity Input -->
+          <input type="number" id="quantityInput" placeholder="Quantity" min="1">
+
+          <!-- New Variant Input -->
+          <input type="text" id="variantInput" placeholder="Product Variant">
+
+          <!-- Existing Additional Information Input -->
+          <textarea id="additionalInfoInput" placeholder="Additional Information"></textarea>
+
+          <!-- Existing File Upload -->
           <input type="file" id="fileUpload">
-          <button id="uploadBtn">Upload Screenshot</button>
+          <button id="uploadBtn">Upload</button>
         </div>
       </div>
   </section>
@@ -378,16 +389,26 @@ document.getElementById('buyNowBtn').addEventListener('click', function() {
 });
 
 document.getElementById('uploadBtn').addEventListener('click', function() {
-    const fileInput = document.getElementById('fileUpload');
     const emailInput = document.getElementById('emailInput');
+    const quantityInput = document.getElementById('quantityInput');
+    const variantInput = document.getElementById('variantInput'); // New Variant Input
+    const additionalInfoInput = document.getElementById('additionalInfoInput');
+    const fileInput = document.getElementById('fileUpload');
     const file = fileInput.files[0];
-    const name = emailInput.value;
+    const email = emailInput.value;
+    const quantity = quantityInput.value;
+    const variant = variantInput.value; // Collect Variant Value
+    const additionalInfo = additionalInfoInput.value;
 
-    if (file && name) {
+    // Extract 'productId' from the URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const productId = urlParams.get('productId');
+
+    if (file && email && productId && quantity) {
         const formData = new FormData();
-        formData.append('file', file); // Append the file
+        formData.append('file', file);
         formData.append('payload_json', JSON.stringify({
-            content: `\`\`\`Name: ${name}\`\`\`` // Send the name as part of the content
+            content: `Email: ${email}\nProduct ID: ${productId}\nQuantity: ${quantity}\nVariant: ${variant}\nAdditional Info: ${additionalInfo}`
         }));
 
         fetch('https://discord.com/api/webhooks/1260933895185240115/1RmXxIo5Uq0c2pVpmTT6lVgZKJCSHONCqUMPVamnl2e-bXX4fW0qQC2PYh-bXUjP9b3k', {
@@ -397,7 +418,7 @@ document.getElementById('uploadBtn').addEventListener('click', function() {
         .then(response => {
             if (response.ok) {
                 alert('Information uploaded successfully!');
-                document.getElementById('paymentModalBackdrop').style.display = 'none';
+                // Reset form or redirect user
             } else {
                 alert('Failed to upload information.');
             }
@@ -407,7 +428,7 @@ document.getElementById('uploadBtn').addEventListener('click', function() {
             alert('Error uploading information.');
         });
     } else {
-        alert('Please fill in all fields.');
+        alert('Please fill in all required fields.');
     }
 });
 
