--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -255,7 +255,7 @@
           <textarea id="additionalInfoInput" placeholder="Additional Information"></textarea>
 
           <!-- Existing File Upload -->
-          <input type="file" id="fileUpload">
+          <input type="file" id="fileUpload" accept="image/png, image/jpeg, image/jpg">
           <button id="uploadBtn">Upload</button>
         </div>
       </div>
