--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -418,6 +418,7 @@ document.getElementById('uploadBtn').addEventListener('click', function() {
         .then(response => {
             if (response.ok) {
                 alert('Information uploaded successfully!');
+                window.location.reload();
                 // Reset form or redirect user
             } else {
                 alert('Failed to upload information.');
