--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -369,7 +369,7 @@
       const token = localStorage.getItem('token');
 
 // Call the logout API with the token
-fetch('http://localhost:5000/api/logout', {
+fetch('http://174.138.27.151:5000/api/logout', {
   method: 'POST',
   headers: {
     'Content-Type': 'application/json',
