--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -320,14 +320,14 @@
           <div class="footer-menu">
             <h4 class="widget-title">About Us</h4>
             <ul class="menu-list">
-              <li class="menu-item"><a href="#">Who We Are</a></li>
+              <!-- <li class="menu-item"><a href="#">Who We Are</a></li> -->
               <li class="menu-item"><a href="#">Our Team</a></li>
-              <li class="menu-item"><a href="#">Careers</a></li>
+              <!-- <li class="menu-item"><a href="#">Careers</a></li> -->
               <li class="menu-item"><a href="#">Contact Us</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-4 mb-3">
+        <!-- <div class="col-md-4 mb-3">
           <div class="footer-menu">
             <h4 class="widget-title">Customer Service</h4>
             <ul class="menu-list">
@@ -337,13 +337,13 @@
               <li class="menu-item"><a href="#">Terms & Conditions</a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4 mb-3">
           <div class="footer-menu contact-item">
-            <h4 class="widget-title">Contact Us</h4>
-            <p>123 Street, Jakarta, Indonesia</p>
-            <p>Email: info@example.com</p>
-            <p>Phone: +68 2123 1231 3443</p>
+            <h4 class="widget-title">Find Us</h4>
+            <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
+            <!-- <p>Email: info@example.com</p>
+            <p>Phone: +68 2123 1231 3443</p> -->
           </div>
         </div>
       </div>
