--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -346,8 +346,6 @@
             <p>Phone: +68 2123 1231 3443</p> -->
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-12 text-center">
           <div class="social-links">
             <ul class="list-unstyled d-flex justify-content-center">
@@ -357,8 +355,21 @@
               <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
           </div>
-          <p class="text-white">© 2024 Your Company. All rights reserved.</p>
+          <p class="text-white">© 2024 VendorKITA. All rights reserved.</p>
         </div>
+      </div>
+      <div class="row">
+        <!-- <div class="col-md-12 text-center">
+          <div class="social-links">
+            <ul class="list-unstyled d-flex justify-content-center">
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+          </div>
+          <p class="text-white">© 2024 Your Company. All rights reserved.</p>
+        </div> -->
       </div>
     </div>
   </footer>
