--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -126,6 +126,10 @@
   .footer-menu.contact-item a:hover {
     color: #0056b3;
   }
+
+  .align-right {
+    text-align: right;
+}
 </style>
   </head>
   <body>
@@ -339,7 +343,7 @@
           </div>
         </div> -->
         <div class="col-md-4 mb-3">
-          <div class="footer-menu contact-item">
+          <div class="footer-menu contact-item text-right">
             <h4 class="widget-title">Find Us</h4>
             <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
             <!-- <p>Email: info@example.com</p>
