--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -342,6 +342,14 @@
             </ul>
           </div>
         </div> -->
+        <div class="col-md-4 mb-3">
+          <div class="footer-menu contact-item" style="text-align: right;">
+            <h4 class="widget-title">Find Us</h4>
+            <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
+            <!-- <p>Email: info@example.com</p>
+            <p>Phone: +68 2123 1231 3443</p> -->
+        </div>
+        </div>
         <div class="col-md-12 text-center">
           <div class="social-links">
             <ul class="list-unstyled d-flex justify-content-center">
@@ -353,15 +361,6 @@
           </div>
           <p class="text-white">© 2024 VendorKITA. All rights reserved.</p>
         </div>
-        <div class="col-md-4 mb-3">
-          <div class="footer-menu contact-item text-right">
-            <h4 class="widget-title">Find Us</h4>
-            <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
-            <!-- <p>Email: info@example.com</p>
-            <p>Phone: +68 2123 1231 3443</p> -->
-          </div>
-        </div>
-        
       </div>
       <div class="row">
         <!-- <div class="col-md-12 text-center">
