--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -320,37 +320,19 @@
   <footer class="py-5" style="background-color: #a44e24;">
     <div class="container">
       <div class="row">
+        <!-- About Us on the left -->
         <div class="col-md-4 mb-3">
           <div class="footer-menu">
             <h4 class="widget-title">About Us</h4>
             <ul class="menu-list">
-              <!-- <li class="menu-item"><a href="#">Who We Are</a></li> -->
               <li class="menu-item"><a href="#">Our Team</a></li>
-              <!-- <li class="menu-item"><a href="#">Careers</a></li> -->
               <li class="menu-item"><a href="#">Contact Us</a></li>
             </ul>
           </div>
         </div>
-        <!-- <div class="col-md-4 mb-3">
-          <div class="footer-menu">
-            <h4 class="widget-title">Customer Service</h4>
-            <ul class="menu-list">
-              <li class="menu-item"><a href="#">Help & FAQs</a></li>
-              <li class="menu-item"><a href="#">Shipping & Returns</a></li>
-              <li class="menu-item"><a href="#">Privacy Policy</a></li>
-              <li class="menu-item"><a href="#">Terms & Conditions</a></li>
-            </ul>
-          </div>
-        </div> -->
-        <div class="col-md-4 mb-3">
-          <div class="footer-menu contact-item" style="text-align: right;">
-            <h4 class="widget-title">Find Us</h4>
-            <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
-            <!-- <p>Email: info@example.com</p>
-            <p>Phone: +68 2123 1231 3443</p> -->
-        </div>
-        </div>
-        <div class="col-md-12 text-center">
+
+        <!-- Social Links and Copyright in the middle -->
+        <div class="col-md-4 mb-3 text-center">
           <div class="social-links">
             <ul class="list-unstyled d-flex justify-content-center">
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -361,22 +343,17 @@
           </div>
           <p class="text-white">© 2024 VendorKITA. All rights reserved.</p>
         </div>
-      </div>
-      <div class="row">
-        <!-- <div class="col-md-12 text-center">
-          <div class="social-links">
-            <ul class="list-unstyled d-flex justify-content-center">
-              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-            </ul>
+
+        <!-- Find Us on the right -->
+        <div class="col-md-4 mb-3 text-right">
+          <div class="footer-menu contact-item">
+            <h4 class="widget-title">Find Us</h4>
+            <p>Jl. HS.Ronggo Waluyo, Puseurjaya, Telukjambe Timur, Karawang, Jawa Barat 41361</p>
           </div>
-          <p class="text-white">© 2024 Your Company. All rights reserved.</p>
-        </div> -->
+        </div>
       </div>
     </div>
-  </footer>
+</footer>
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
