--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -357,6 +357,12 @@
       document.getElementById('loginButton').style.display = 'block';
       document.getElementById('registerButton').style.display = 'block';
       document.getElementById('logoutButton').style.display = 'none';
+      const buyNowButton = document.getElementById('buyNowBtn');
+    buyNowButton.onclick = function() {
+      window.location.href = '/login'; // Adjust the path as needed
+    };
+    // Optionally, change the button text to "Login to Buy"
+    buyNowButton.textContent = 'Login to Buy';
     }
   });
   document.addEventListener('DOMContentLoaded', function() {
