--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -359,7 +359,7 @@
       document.getElementById('logoutButton').style.display = 'none';
       const buyNowButton = document.getElementById('buyNowBtn');
     buyNowButton.onclick = function() {
-      window.location.href = '/login'; // Adjust the path as needed
+      window.location.href = '/login.html'; // Adjust the path as needed
     };
     // Optionally, change the button text to "Login to Buy"
     buyNowButton.textContent = 'Login to Buy';
