--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -223,16 +223,16 @@
                       <!-- <span class="text-decoration-line-through">$45.00</span> -->
                       <span>Rp. 40.00</span>
                   </div>
-                  <div class="mb-3">
+                  <!-- <div class="mb-3">
                       <span class="fa fa-star star-rating" data-rating="1"></span>
                       <span class="fa fa-star star-rating" data-rating="2"></span>
                       <span class="fa fa-star star-rating" data-rating="3"></span>
                       <span class="fa fa-star star-rating" data-rating="4"></span>
                       <span class="fa fa-star star-rating" data-rating="5"></span>
-                  </div>
+                  </div> -->
                   <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
                   <div class="d-flex">
-                      <input class="form-control text-center me-3" id="inputQuantity" type="number" value="1" min="1" style="max-width: 3rem" />
+                      <!-- <input class="form-control text-center me-3" id="inputQuantity" type="number" value="1" min="1" style="max-width: 3rem" /> -->
                       <button class="btn btn-outline-dark flex-shrink-0" type="button" id="buyNowBtn">
                           <i class="bi-cart-fill me-1"></i>
                           Buy Now
