--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -147,9 +147,9 @@
           </div>
         </form>
       </div>
-      <a class="col-2" href="#">
+      <!-- <a class="col-2" href="#">
         <i class="fa-solid fa-cart-plus" style="color: white;"></i>
-      </a>
+      </a> -->
       <div class="col-md-2 text-end">
         <a href="login.html" id="loginButton" class="btn btn-outline-warning me-2">Login</a>
         <a href="register.html" id="registerButton" class="btn btn-dark">Sign-up</a>
