--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -259,7 +259,7 @@
   <footer class="py-5" style="background-color: #a44e24;">
     <div class="container">
       <div class="row">
-        <!-- About Us on the left -->
+        <!-- About Us on the left
         <div class="col-md-4 mb-3">
           <div class="footer-menu">
             <h4 class="widget-title">About Us</h4>
@@ -268,7 +268,7 @@
               <li class="menu-item"><a href="#">Contact Us</a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
         <!-- Social Links and Copyright in the middle -->
         <div class="col-md-4 mb-5 text-center">
