--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -130,6 +130,15 @@
   .align-right {
     text-align: right;
 }
+.signature {
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    padding: 20px;
+    margin-top: 50px;
+    background-color: #f0f0f0;
+    color: #333;
+    border-top: 1px solid #dcdcdc;
+  }
 </style>
   </head>
   <body>
@@ -320,16 +329,17 @@
   <footer class="py-5" style="background-color: #a44e24;">
     <div class="container">
       <div class="row">
-        <!-- About Us on the left
+        <!-- About Us on the left -->
         <div class="col-md-4 mb-3">
           <div class="footer-menu">
             <h4 class="widget-title">About Us</h4>
             <ul class="menu-list">
-              <li class="menu-item"><a href="#">Our Team</a></li>
-              <li class="menu-item"><a href="#">Contact Us</a></li>
+              <div class="signature">
+                Made by Dhafa, Nate, Jibran
+              </div>
             </ul>
           </div>
-        </div> -->
+        </div>
 
         <!-- Social Links and Copyright in the middle -->
         <div class="col-md-4 mb-5 text-center">
