--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -333,11 +333,11 @@
         <div class="col-md-4 mb-3">
           <div class="footer-menu">
             <h4 class="widget-title">About Us</h4>
-            <ul class="menu-list">
+            <!-- <ul class="menu-list"> -->
               <div class="signature">
                 Made by Dhafa, Nate, Jibran
               </div>
-            </ul>
+            <!-- </ul> -->
           </div>
         </div>
 
