--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -331,14 +331,15 @@
       <div class="row">
         <!-- About Us on the left -->
         <div class="col-md-4 mb-3">
-          <div class="footer-menu">
+          <!-- <div class="footer-menu"> -->
             <h4 class="widget-title">About Us</h4>
             <!-- <ul class="menu-list"> -->
               <div class="signature">
                 Made by Dhafa, Nate, Jibran
+                Contact us at WhatsApp: 0821-2707-2206
               </div>
             <!-- </ul> -->
-          </div>
+          <!-- </div> -->
         </div>
 
         <!-- Social Links and Copyright in the middle -->
