--- a/Frontend/pageproduct.html
+++ b/Frontend/pageproduct.html
@@ -259,15 +259,17 @@
   <footer class="py-5" style="background-color: #a44e24;">
     <div class="container">
       <div class="row">
-        About Us on the left
+        <!-- About Us on the left -->
         <div class="col-md-4 mb-3">
-          <div class="footer-menu">
+          <!-- <div class="footer-menu"> -->
             <h4 class="widget-title">About Us</h4>
-            <ul class="menu-list">
-              <li class="menu-item"><a href="#">Our Team</a></li>
-              <li class="menu-item"><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
+            <!-- <ul class="menu-list"> -->
+              <div class="signature">
+                Made by Dhafa, Nate, Jibran
+                Contact us at WhatsApp: 0821-2707-2206
+              </div>
+            <!-- </ul> -->
+          <!-- </div> -->
         </div>
 
         <!-- Social Links and Copyright in the middle -->
