--- a/Frontend/landingpage.html
+++ b/Frontend/landingpage.html
@@ -330,16 +330,12 @@
     <div class="container">
       <div class="row">
         <!-- About Us on the left -->
-        <div class="col-md-4 mb-3">
-          <!-- <div class="footer-menu"> -->
+        <div class="col-md-4 mb-3 text-right">
+          <div class="footer-menu contact-item">
             <h4 class="widget-title">About Us</h4>
-            <!-- <ul class="menu-list"> -->
-              <div class="signature">
-                Made by Dhafa, Nate, Jibran
-                Contact us at WhatsApp: 0821-2707-2206
-              </div>
-            <!-- </ul> -->
-          <!-- </div> -->
+            <!-- <p>Made by Dhafa, Nate, Jibran</p> -->
+            <p>Contact us at WhatsApp: 0821-2707-2206</p>
+          </div>
         </div>
 
         <!-- Social Links and Copyright in the middle -->
